--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <section id="telefone">
         </section>
         <section id="redes-sociais">
+            <a href="#"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="#"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="#"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="#"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="#"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="#"><img src="imagens/logo-youtube.jpg" alt=""></a>
         </section>
     </main>
 </body>
