--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main>
         <section id="telefone">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
             <a href="#"><img src="imagens/logo-home.jpg" alt=""></a>
