--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#"><img src="imagens/logo-home.jpg" alt=""></a>
-            <a href="#"><img src="imagens/logo-facebook.jpg" alt=""></a>
-            <a href="#"><img src="imagens/logo-github.jpg" alt=""></a>
-            <a href="#"><img src="imagens/logo-instagram.jpg" alt=""></a>
-            <a href="#"><img src="imagens/logo-twitter.jpg" alt=""></a>
-            <a href="#"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="imagens/tela-home.jpg" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="imagens/tela-facebook.jpg" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="imagens/tela-github.jpg" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="imagens/tela-instagram.jpg" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="imagens/tela-twitter.jpg" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="imagens/tela-youtube.png" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
         </section>
     </main>
 </body>
